@@ -158,14 +158,17 @@
 		**/
 		public function getPropertyByName($name)
 		{
-			$list = $this->getPropertyList();
-			
-			if (isset($list[$name]))
-				return $list[$name];
+			if ($property = $this->safePropertyGet($name))
+				return $property;
 			
 			throw new MissingElementException(
 				"unknown property requested by name '{$name}'"
 			);
+		}
+		
+		public function isPropertyExists($name)
+		{
+			return $this->safePropertyGet($name) !== null
 		}
 		
 		/**
@@ -430,6 +433,16 @@
 				return $property->getProto()->exportPrimitive(
 					$path, $prm, $object->$getter(), $ignoreNull
 				);
+		}
+		
+		private function safePropertyGet($name)
+		{
+			$list = $this->getPropertyList();
+			
+			if (isset($list[$name]))
+				return $list[$name];
+			
+			return null;
 		}
 	}
 ?>
